# ftl-automation-agent

./: .gitignore  README.md  pyproject.toml
ftl_agent/: Gradio_UI.py  __init__.py  cli.py  core.py  shell.py  ui.py
ftl_automation_agent/: Gradio_UI.py  __init__.py  agents.py  app.py  cli.py  codegen.py  core.py  default_tools.py  local_python_executor.py  secret.py  tools.py  ui.py  util.py
tests/: test_host_arg_ref.py
