[project]
name = "ftl-automation-agent"
version = "0.1.2"
dependencies = [
    "smolagents[litellm]==1.9.2",
    "faster_than_light",
    "gradio",
    "black",
    "textual",
]

[tool.setuptools]
packages = ["ftl_automation_agent", "ftl_automation_agent.prompts"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ftl-automation-agent = "ftl_automation_agent.cli:main"
ftl-automation-agent-ui = "ftl_automation_agent.ui:main"
ftl-automation-agent-shell = "ftl_automation_agent.shell:main"

[tool.setuptools.package-data]
"ftl_automation_agent.prompts" = ["*.yaml"]

